# agent-workbench

./: .gitignore  README.md  pyproject.toml  run_app.py  start_workbench.sh
documentation/: 01_PHASE1_RESEARCH_FOUNDATIONS.md  02_ARCHITECTURE.md  03_DOMAIN_MODEL.md  04_SESSION_FORKING.md  05_AGENT_PROFILES.md  06_HARNESS_ADAPTERS.md  07_EVENT_CHANNEL_MODEL.md  08_UI_WORKFLOW.md  09_SUBAGENT_TASK_PROFILES.md  10_ORCHESTRATOR_CONTRACT_PHASES_3_9.md  11_PHASE3_KICKOFF.md  12_PHASE8_FAILURE_MATRIX.md  13_PHASE8_ISSUE_LIST.md  14_PHASE8_READINESS_REPORT.md  15_PHASE9_OPERATOR_RUNBOOK.md  16_PHASE9_INSTALL_AND_RUN.md  17_PHASE9_DOCUMENTATION_PACK.md  18_PHASE9_RELEASE_CHECKLIST.md  19_PHASE9_FINAL_READINESS_STATUS.md  20_AGENT_WORK_VISUALIZATION.md  README.md  alpha-architecture.md  harness-chat-ux-upgrade-handoff.md  open_decisions.md
tests/: conftest.py  test_agent_profile_binding_repo.py  test_agent_profile_repo.py  test_agent_runtime_tool_loop.py  test_agent_status_monitoring.py  test_agent_teams.py  test_alpha_concurrent_runtime.py  test_alpha_persistence.py  test_alpha_status_routes.py  test_artifact_repo.py  test_artifact_verifier.py  test_beta_integration.py  test_beta_ui_shell.py  test_channel_repo.py  test_chat_live_update_guard.py  test_cross_harness_confirmation.py  test_csrf.py  test_db_connection.py  test_discussion_adapter.py  test_event_record_repo.py  test_fork_record_repo.py  test_fork_removal.py  test_fork_service.py  test_fork_ui.py  test_harness_run_repo.py  test_hermes_adapter.py  test_independent_review_fixes.py  test_landing_session_delete.py  (+52 more)
(+127 files in other folders)
